Added content for TLS best practices, ignored the formatting since it will be changed once bootstrap is merged

--- a/_layouts/quickstart.html
+++ b/_layouts/quickstart.html
@@ -2,6 +2,9 @@
 layout: default
 ---
 {% include path.html %}
+{% include best_practice.html %}
+{% include related_articles.html %}
+
 
 <div class="container-fluid cdr-page-container">
   <div class="row">
