--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -7,6 +7,12 @@ layout: default
 
 {% include alerts.html %}
 
+{% include best_practice.html %}
+
+{% include related_articles.html %}
+
+
+
 
 <div class="container-fluid cdr-page-container">
   <div class="row">
