--- a/_layouts/page1.html
+++ b/_layouts/page1.html
@@ -3,6 +3,9 @@ layout: default
 ---
 {% include path.html %}
 
+{% include related_articles.html %}
+
+
 <div class="container-fluid cdr-page-container">
   <div class="row">
     <div id="topic" >
